--- a/data/css/global.css
+++ b/data/css/global.css
@@ -4,8 +4,12 @@ body {
 
 .container {
 	display: grid;
-	grid-template-areas: "header empty link1 link2"
-			     "content content content content";
-	grid-template-rows: 2fr 8fr;
 	grid-template-columns: 5fr 3fr 1fr 1fr;
+}
+
+.box {
+	background-color: #444;
+	color: #fff;
+	padding: 20px;
+	font-size: 150%;
 }
