--- a/data/css/global.css
+++ b/data/css/global.css
@@ -5,6 +5,7 @@ body {
 .container {
 	display: grid;
 	grid-template-columns: 5fr 3fr 1fr 1fr;
+  grid-template-rows: minmax(20px, 100px)
 }
 
 .box {
