update index with temp index for test

--- a/data/css/global.css
+++ b/data/css/global.css
@@ -8,6 +8,11 @@ body {
   grid-template-rows: minmax(20px, 100px)
 }
 
+.content {
+  grid-column-start: 1;
+  grid-column-end: 4;
+}
+
 .box {
 	background-color: #444;
 	color: #fff;
