--- a/data/css/global.css
+++ b/data/css/global.css
@@ -3,6 +3,9 @@ body {
 }
 
 .container {
+}
+
+.header-grid {
 	display: grid;
 	grid-template-columns: 5fr 3fr 1fr 1fr;
   grid-template-rows: minmax(20px, 100px)
