--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,17 +1,17 @@
 <html>
-	<head>
+  <head>
     <title>{{ title }}</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" type="text/css" href="src/css/global.css">
-	</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="src/css/global.css">
+  </head>
 
-	<body> 
-		<div class="container">
+  <body> 
+    <div class="container">
       {% include 'header.html' %}
 
-      {% include 'content.html' %}
-		</div>
-	</body>
+      {% include 'page.html' %}
+    </div>
+  </body>
 
   <script src="src/js/global.js"></script>
 
