--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -2,7 +2,7 @@
   <head>
     <title>{{ title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="src/css/global.css">
+    <link rel="stylesheet" type="text/css" href="/src/css/global.css">
   </head>
 
   <body> 
@@ -13,6 +13,6 @@
     </div>
   </body>
 
-  <script src="src/js/global.js"></script>
+  <script src="/src/js/global.js"></script>
 
 </html>
