--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -2,7 +2,8 @@
   <head>
     <title>{{ title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="/src/css/global.css">
+    <!-- TODO this is not generic -->
+    <link rel="stylesheet" type="text/css" href="cjpais.github.io/src/css/global.css">
   </head>
 
   <body> 
@@ -13,6 +14,7 @@
     </div>
   </body>
 
-  <script src="/src/js/global.js"></script>
+  <!-- TODO this is not generic -->
+  <script src="cjpais.github.io/src/js/global.js"></script>
 
 </html>
