updated pages from script:

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -3,7 +3,7 @@
     <title>{{ title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- TODO this is not generic -->
-    <link rel="stylesheet" type="text/css" href="{{basedir}}src/css/global.css">
+    <link rel="stylesheet" type="text/css" href="{{dir}}src/css/global.css">
   </head>
 
   <body> 
@@ -15,6 +15,6 @@
   </body>
 
   <!-- TODO this is not generic -->
-  <script src="{{basedir}}src/js/global.js"></script>
+  <script src="{{dir}}src/js/global.js"></script>
 
 </html>
