--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,17 +1,17 @@
 <div class="header-grid">
   <div>
-    <object type="image/svg+xml" data="{{basedir}}res/svg/Title.svg">
+    <object type="image/svg+xml" data="{{  dir  }}res/svg/Title.svg">
       CJ Pais
     </object>
   </div>
   <div></div>
   <div>
-    <object type="image/svg+xml" data="{{basedir}}res/svg/Posts.svg">
+    <object type="image/svg+xml" data="{{  dir  }}res/svg/Posts.svg">
       Posts
     </object>
   </div>
   <div>
-    <object type="image/svg+xml" data="{{basedir}}res/svg/About.svg">
+    <object type="image/svg+xml" data="{{  dir  }}res/svg/About.svg">
       About
     </object>
   </div>
